Overflow Style fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -622,28 +622,30 @@ span.text-red {
     height: 560px;
     margin-top: 80px;
   }
+
   .footer-banner-image {
-    width: auto;
+    width: 75%;
     left: 30%;
     top: 6%;
-    height: 56%;
+    height: 75%;
+    object-fit: contain;
   }
   .banner-desc .left h3 {
     font-weight: 900;
-    font-size: 50px;
+    font-size: 2.8rem;
     margin-left: 5px;
   }
   .banner-desc .left p {
     margin: 18px;
   }
   .banner-desc .right h3 {
-    font-size: 45px;
+    font-size: 2.5rem;
   }
   .banner-desc .right p {
-    font-size: 18px;
+    font-size: 1rem;
   }
   .banner-desc .right .company-desc {
-    font-size: 14px;
+    font-size: 0.8rem;
   }
   .banner-desc {
     flex-wrap: wrap;
